syntax = "proto3";

package overdoll.libraries;

enum ResourceType {
  IMAGE = 0;
  VIDEO = 1;
}

enum SOURCE {
  STING = 0;
}

message Resource {
  string id = 1;
  string itemId = 2;
  bool processed = 3;
  string processedId = 4;
  bool private = 5;
  string videoThumbnail = 6;
  string videoThumbnailMimeType = 7;
  int64 width = 8;
  int64 height = 9;
  int64 videoDuration = 10;
  repeated string mimeTypes = 11;
  ResourceType type = 12;
  string preview = 13;
  string token = 14;
  bool failed = 15;
}


